<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="mediastore">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="need_help">Написать в поддержку</string>
    <string name="user_aggreement">Пользовательское соглашение</string>
    <string name="share_app_link" translatable="false">https://practicum.yandex.ru/android-developer</string>
    <string name="contact_us" translatable="false">siros2008@yandex.ru</string>
    <string name="need_help_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="need_help_mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="empty_search_result" translatable="false">Ничего не нашлось</string>
    <string name="get_tracks_error_message" translatable="false">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history_text">Очистить историю</string>
    <string name="you_search">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>