<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#3772E7">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_name_bottom_margin"
        android:layout_marginHorizontal="@dimen/main_horizontal_margin"
        android:paddingVertical="@dimen/app_name_vert_padding"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/app_name_font_size" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_horizontal_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/base_font_color"
        android:foreground="?attr/selectableItemBackground"
        app:iconPadding="@dimen/icon_padding"
        app:cornerRadius="@dimen/main_buttons_radius"
        app:icon="@drawable/light_mode"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/mediastore_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_horizontal_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/mediastore"
        android:textColor="@color/base_font_color"
        android:foreground="?attr/selectableItemBackground"
        app:iconPadding="@dimen/icon_padding"
        app:icon="@drawable/mediastore"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/main_buttons_radius" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_horizontal_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/base_font_color"
        android:foreground="?attr/selectableItemBackground"
        app:iconPadding="@dimen/icon_padding"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/main_buttons_radius" />
</LinearLayout>