<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <Button
        android:id="@+id/back_to_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_nav_bar_height"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="@dimen/top_nav_bar_bottom_margin"
        android:text="@string/settings"
        android:textColor="@color/base_font_color"
        android:textAlignment="textStart"
        android:textSize="@dimen/top_nav_bar_font_size"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/back"
        app:iconGravity="start"
        app:iconTint="@color/black"
        app:iconPadding="@dimen/back_button_padding"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/dark_theme"
        android:textSize="@dimen/base_font_size"
        android:paddingVertical="@dimen/settings_vert_padding"
        android:paddingStart="@dimen/settings_start_padding"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/settings_vert_padding"
        android:paddingStart="@dimen/settings_start_padding"
        android:backgroundTint="@color/white"
        android:text="@string/dark_theme"
        android:textSize="@dimen/base_font_size"
        android:textColor="@color/base_font_color"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        app:icon="@drawable/share_app"
        app:iconGravity="end"
        app:iconTint="@color/black" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/settings_vert_padding"
        android:paddingStart="@dimen/settings_start_padding"
        android:backgroundTint="@color/white"
        android:text="@string/need_help"
        android:textSize="@dimen/base_font_size"
        android:textColor="@color/base_font_color"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        app:icon="@drawable/need_help"
        app:iconGravity="end"
        app:iconTint="@color/black" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/settings_vert_padding"
        android:paddingStart="@dimen/settings_start_padding"
        android:backgroundTint="@color/white"
        android:text="@string/user_aggreement"
        android:textSize="@dimen/base_font_size"
        android:textColor="@color/base_font_color"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        app:icon="@drawable/arrow_forward"
        app:iconGravity="end"
        app:iconTint="@color/black" />
</LinearLayout>