<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    >
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".layout.PlayerActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/back_to_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_nav_bar_height"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/header_style"
            app:navigationIcon="@drawable/back"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>
        <ImageView
            android:id="@+id/album_img"
            android:layout_width="0dp"
            android:layout_height="312dp"
            android:layout_marginTop="26dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@id/back_to_main"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            android:src="@drawable/placeholder"
            />
        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintTop_toBottomOf="@id/album_img"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            android:text="Колизей"
            />
        <TextView
            android:id="@+id/artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            android:text="Колизей"
            />

        <ImageView
            android:id="@+id/add_to_collection"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@id/play"
            app:layout_constraintEnd_toStartOf="@id/play"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintBottom_toBottomOf="@id/play"
            android:backgroundTint="@color/black"
            app:iconTint="@color/white"
            android:src="@drawable/add_to_collection"
            />

        <ImageView
            android:id="@+id/play"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/artist"
            app:layout_constraintStart_toEndOf="@id/add_to_collection"
            app:layout_constraintEnd_toStartOf="@id/like"
            android:src="@drawable/play"
            />

        <ImageView
            android:id="@+id/like"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/play"
            app:layout_constraintStart_toEndOf="@id/play"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintBottom_toBottomOf="@id/play"
            android:src="@drawable/like"
            />
        <TextView
            android:id="@+id/time_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/play"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            android:textSize="14sp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_medium"
            android:text="0:00"
            />
        <TextView
            android:id="@+id/duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="13sp"
            android:textColor="@color/base_tint_color"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toBottomOf="@id/time_played"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            android:text="@string/duration"/>
        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:layout_marginTop="30dp"
            android:textSize="13sp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toBottomOf="@id/time_played"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            android:text="5:23"/>
        <TextView
            android:id="@+id/album_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="13sp"
            android:textColor="@color/base_tint_color"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toBottomOf="@id/duration_label"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            android:text="@string/album"/>
        <TextView
            android:id="@+id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="13sp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toBottomOf="@id/duration"
            app:layout_constraintEnd_toEndOf="@+id/right_border"
            android:text="Химера"/>
        <TextView
            android:id="@+id/year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="13sp"
            android:textColor="@color/base_tint_color"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toBottomOf="@id/album_label"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            android:text="@string/year"/>
        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="13sp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toBottomOf="@id/album"
            app:layout_constraintEnd_toEndOf="@+id/right_border"
            android:text="2003"/>
        <TextView
            android:id="@+id/genre_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textColor="@color/base_tint_color"
            android:textSize="13sp"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toBottomOf="@id/year_label"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            android:text="@string/genre"/>
        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="13sp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toBottomOf="@id/year"
            app:layout_constraintEnd_toEndOf="@+id/right_border"
            android:text="Рок"/>
        <TextView
            android:id="@+id/country_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="13sp"
            android:textColor="@color/base_tint_color"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toBottomOf="@id/genre_label"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            android:text="@string/country"/>
        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="13sp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintEnd_toEndOf="@+id/right_border"
            android:text="Россия"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>